RESOLVED FIXED232269
[JSC] Fix stale assertion in InternalFunctionAllocationProfile after r284757
https://bugs.webkit.org/show_bug.cgi?id=232269
Summary [JSC] Fix stale assertion in InternalFunctionAllocationProfile after r284757
Yusuke Suzuki
Reported 2021-10-25 14:05:02 PDT
[JSC] Fix stale assertion in InternalFunctionAllocationProfile after r284757
Attachments
Patch (2.08 KB, patch)
2021-10-25 14:06 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2021-10-25 14:06:28 PDT
Robin Morisset
Comment 2 2021-10-25 14:12:03 PDT
Comment on attachment 442413 [details] Patch r=me
EWS
Comment 3 2021-10-25 17:35:00 PDT
Committed r284852 (243529@main): <https://commits.webkit.org/243529@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442413 [details].
Radar WebKit Bug Importer
Comment 4 2021-10-25 17:35:26 PDT
Note You need to log in before you can comment on or make changes to this bug.