[JSC] Fix stale assertion in InternalFunctionAllocationProfile after r284757 https://bugs.webkit.org/show_bug.cgi?id=232269

Reviewed by Robin Morisset.

Now, condition in InternalFunction is changed in r284757. We need to update
this assertion accordingly. It is tested (and crashing) in the existing stress test[1].

[1]: InternalFunctionAllocationProfile-createAllocationStructureFromBase-should-allow-for-same-classInfo-from-different-globals.js

* bytecode/InternalFunctionAllocationProfile.h:
(JSC::InternalFunctionAllocationProfile::createAllocationStructureFromBase):


Canonical link: https://commits.webkit.org/243529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284852 268f45cc-cd09-0410-ab3c-d52691b4dbfc